# wikipedia_proj

./: .gitignore  Cargo.toml
src/: a_to_z_generation.rs  macros.rs  main.rs  tokio_test.rs  tree.rs
src/saved_data/: page_list.txt  slimmed_list_vec.txt
