[package]
name = "wikipedia_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
instant = "0.1.13"
tokio = { version = "1.40.0", features = ["full"] }
